--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,6 +9,7 @@ $small: 554px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1920px;
 
     @media screen and (max-width: $med) {
         padding-left: 3.2vw;
@@ -74,6 +75,7 @@ $small: 554px;
 
     .sidenav {
         opacity: 0;
+        padding: 0 1rem;
         background: white;
         color: #333;
         position: fixed;
@@ -83,9 +85,9 @@ $small: 554px;
         left: 0;
         display: flex;
         justify-content: center;
-        align-items: center;
         flex-direction: column;
         z-index: -10;
+        overflow-y: scroll;
         transition: all .05s ease-in;
         -webkit-overflow-scrolling: touch;
 
@@ -93,19 +95,66 @@ $small: 554px;
             font-family: 'Work Sans', sans-serif;
             font-weight: 400;
             font-style: normal;
-            font-size: 26px;
-            letter-spacing: 0em;
+            font-size: 2.6rem;
+            letter-spacing: -1px;
             line-height: 1.6em;
             text-transform: none;
             text-decoration: none;
             outline: none;
             color: #333;
             position: relative;
-            bottom: 4rem;
+            bottom: 2rem;
+            text-transform: uppercase;
+        }
+
+        .sidenav-logo {
+            position: absolute;
+            top: 1rem;
+
+            img {
+                max-width: 100%;
+                height: 66px;
+            }
         }
 
         .active {
             color: #b0a997;
+        }
+
+        .icon-container {
+            position: absolute;
+            bottom: 2rem;
+
+            i {
+                fill: #222;
+                font-size: 2rem;
+                color: #222;
+                transition: all .2s ease-in-out;
+            }
+    
+            &:hover a {
+                color: #c7c7c7;
+            }
+            a {
+                padding-left: 0;
+    
+                &:nth-child(even) {
+                    margin-left: 1.85rem;
+                    margin-right: 1.85rem;
+                }
+    
+                &:last-child {
+                    margin-right: 0;
+                }
+    
+                &:hover {
+                    color: #333;
+                }
+            }
+    
+            @media screen and (max-width: $small) {
+                padding-top: 5px;
+            }
         }
     }
 
