--- a/src/pages/about/aboutpage.scss
+++ b/src/pages/about/aboutpage.scss
@@ -75,7 +75,7 @@ $small: 554px;
         margin-bottom: 1.8rem;
 
         @media screen and (max-width: $med) {
-            font-size: 30px;
+            font-size: 2rem;
             margin-top: 1.3rem;
             margin-bottom: 1.3rem;
         }
