--- a/src/pages/blog/blogpage.scss
+++ b/src/pages/blog/blogpage.scss
@@ -7,6 +7,8 @@ $small: 554px;
     padding: 0 1.5vw 1.5vw;
     display: flex;
     flex-direction: column;
+    // max-width: 1920px;
+    // margin: auto;
 
     @media screen and (max-width: $small) {
         padding: 2rem 3.2vw 3rem;
@@ -18,6 +20,14 @@ $small: 554px;
 
     .text-container {
         padding-top: 25px;
+
+        .title {
+            font-size: 2.60416667vw;
+
+            @media screen and (max-width: $med) {
+                font-size: 30px;
+            }
+        }
 
         h1 {
             margin-top: 0;
