--- a/src/pages/home/homepage.scss
+++ b/src/pages/home/homepage.scss
@@ -101,6 +101,7 @@ $small: 554px;
         }
 
         @media screen and (max-width: $small) {
+            order: 2;
             padding-bottom: 4rem;
         }
 
@@ -144,6 +145,10 @@ $small: 554px;
             width: 100%;
             padding-left: 0;
             padding-bottom: 4rem;
+        }
+
+        @media screen and (max-width: $small) {
+            order: 1;
         }
 
         .blog-posts-container {
@@ -223,9 +228,11 @@ $small: 554px;
             
                     .title {
                         align-self: flex-start;
+                        line-height: 1.7rem;
             
                         @media screen and (min-width: $xlarge) {
                             font-size: 32px;
+                            line-height: 32px;
                         }
             
                         @media screen and (max-width: $med) {
