--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -84,7 +84,6 @@ $small: 554px;
         top: 0;
         left: 0;
         display: flex;
-        justify-content: space-between;
         flex-direction: column;
         z-index: -10;
         overflow-y: scroll;
@@ -92,7 +91,7 @@ $small: 554px;
         -webkit-overflow-scrolling: touch;
 
         .link {
-            font-family: 'Work Sans', sans-serif;
+            font-family: 'Lora', sans-serif;
             font-weight: 400;
             font-style: normal;
             font-size: 2.6rem;
@@ -109,6 +108,8 @@ $small: 554px;
             display: flex;
             justify-content: center;
             flex-direction: column;
+            padding-top: 2rem;
+            padding-bottom: 2rem;
         }
 
         .sidenav-logo {
@@ -124,6 +125,7 @@ $small: 554px;
         }
 
         .icon-container {
+            padding-bottom: 4rem;
 
             i {
                 fill: #222;
