--- a/src/pages/resume/resumepage.scss
+++ b/src/pages/resume/resumepage.scss
@@ -34,23 +34,42 @@ $small: 554px;
     }
 
     a {
+        position: relative;
         font-family: 'Work Sans', sans-serif;
         font-size: 1.5rem;
         font-weight: 300;
         margin: 1.5rem auto 0;
         background-color: white;
         color: #333;
-        border: 2px solid #333;
-        padding: .9em 1.5em;
+        // border: 2px solid #333;
+        // padding: .9em 1.5em;
         text-decoration: none;
         outline: none;
-        transition: all .2s ease-in-out;
+        // transition: all .2s ease-in-out;
 
         &:hover {
-            background-color: #fefc86;
-            color: black;
-            border-radius: 50px;
-            border: 2px solid #fefc86;
+            cursor: pointer;
+        }
+
+        &:before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 3px;
+            // background-color: #1c19ca;
+            // background-image: linear-gradient(
+            //         45deg,
+            //         #CA4246 16.666%, 
+            //         #E16541 16.666%, 
+            //         #c25638 33.333%, 
+            //         #8B9862 50%, 
+            //         #51648f 66.666%, 
+            //         #A7489B 83.333%);
+            // background-image: linear-gradient(70deg,#083df9 20%,#ac7f54 60%,#ee06f2);
+            background-image: linear-gradient(70deg,#083df9 35%,#ac7f54 70%,#ee06f2);
+            background-size: 100%;
+            background-repeat: repeat;
         }
 
         @media screen and (max-width: $small) {
