--- a/src/components/blog-single-info/blog-single-info.scss
+++ b/src/components/blog-single-info/blog-single-info.scss
@@ -161,6 +161,7 @@ $small: 554px;
 
             img {
                 width: 100%;
+                margin: 2rem 0;
             }
 
             h1 {
@@ -267,7 +268,8 @@ $small: 554px;
                     //         #8B9862 50%, 
                     //         #51648f 66.666%, 
                     //         #A7489B 83.333%);
-                    background-image: linear-gradient(70deg,#083df9 35%,#ac7f54 70%,#ee06f2);
+                    // background-image: linear-gradient(70deg,#083df9 35%,#ac7f54 70%,#ee06f2);
+                    background-image: linear-gradient(145deg, #bff617 0%,#93278d 100%);
                     background-size: 100%;
                     background-repeat: repeat;
 
